# anki-note

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.bat  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: pages.yml
analysis/: README.md  pyproject.toml
analysis/fixtures/: adaptive_v2_tiers.json
analysis/src/anki_note_analysis/: __init__.py  backtest.py  backup.py  cli.py  metrics.py  policies.py  reporting.py
analysis/tests/: test_backtest.py  test_backup.py  test_metrics.py  test_policies.py
docs/: future-directions.md  melody-generation.md  practice-comparison.md  queue-algorithm-analysis.md  session-progress.md  ui-tuning.md
docs/adr/: 0001-local-first-mvp.md  0002-web-pwa-with-local-launcher.md  0003-raw-reviews-as-source-of-truth.md  0004-indexeddb-with-file-backups.md  0005-guarded-backup-import-without-merge.md  0006-staff-recall-runs-as-separate-history.md  0007-separate-session-snapshots-from-comparison-groups.md
public/: manifest.webmanifest  service-worker.js
src/: App.tsx  global.d.ts  styles.css
src/audio/: THIRD_PARTY_AUDIO.md  piano.ts
src/components/: BackupConflictActionContent.tsx  GlobalRangeControls.tsx  HistoryLimitControl.tsx  PauseOverlay.tsx  PausedPlaybackBpmInput.tsx  PianoKeyboard.test.ts  PianoKeyboard.tsx  PlayableKeyboardPreview.tsx  PracticeView.tsx  SessionProgressCard.tsx  SessionProgressChart.tsx  SettingsView.tsx  StaffPagePrompt.tsx  StaffPrompt.tsx  StaffRecallMap.tsx  StaffRecallTrendChart.tsx  (+32 more)
(+60 files in other folders)
