[project]
name = "anki-note-analysis"
version = "0.1.0"
description = "Read-only offline analysis for anki-note backups and queue policies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10",
  "numpy>=2.3",
  "pandas>=2.3",
]

[project.scripts]
anki-note-analysis = "anki_note_analysis.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.3",
  "pytest>=8.4",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_note_analysis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
